# NatrixCompilerInterpreter

./: .gitignore  ChangeLog.md  NotasCompiler.txt  README.md  gramatica.bnf
Compiler/: .depend  Makefile  a.out  ast.mli  compile.ml  dune  interp.ml  lexer.ml  lexer.mll  main.ml  natrix  out  parser.ml  parser.mli  parser.mly  printer.ml  run-tests  run-tests_c  test.nx  test.s  typing.ml  valgrind-out.txt  x86_64.ml  x86_64.mli
Compiler/tests/: ._good
Compiler/tests/Compiler/good/: dowhile_memory_break1.nx  dowhile_memory_break1.out  for_memory_break1.out  if_memory1.nx  if_memory1.out  if_memory2.nx  if_memory2.out  if_memory3.nx  (+2 more)
Compiler/tests/bad/: add1.nx  array1.nx  array2.nx  array3.nx  array4.nx  artith.nx  artith2.nx  artith3.nx  bool1.nx  bool10.nx  bool2.nx  bool4.nx  bool5.nx  bool6.nx  bool7.nx  bool8.nx  bool9.nx  comment2.nx  comments.nx  div1.nx  for1.nx  for2.nx  for3.nx  for4.nx  foreach.nx  foreach2.nx  function1.nx  function10.nx  function11.nx  function12.nx  function13.nx  function14.nx  function15.nx  function2.nx  function3.nx  function4.nx  function5.nx  function6.nx  function7.nx  function8.nx  (+35 more)
Compiler/tests/good/: arith1.s  arith2.nx  arith2.s  arith3.nx  arith3.s  arith4.nx  arith4.s  arith5.nx  arith5.s  arith6.nx  arith6.s  arith7.nx  arith7.s  arith8.nx  arith8.s  bitwise1.nx  bitwise1.s  bitwise2.nx  bitwise2.s  bitwise3.nx  bitwise3.s  bitwise4.nx  bitwise4.s  bitwise5.nx  bitwise5.s  bitwise6.nx  bitwise6.s  bool1.nx  bool1.s  bool2.nx  bool2.s  bool3.nx  bool3.s  bool4.nx  bool4.s  bool5.nx  bool5.s  bool6.nx  bool6.s  bool7.nx  (+87 more)
(+30 files in other folders)
